# nc-dev-system

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  URGENT-MEMORY-SAFETY-GUARDRAIL.md  pyproject.toml
.claude/: settings.json
.claude/agents/: builder.md  mock-generator.md  reporter.md  team-lead.md  tester.md
.claude/commands/: build.md  deliver.md  status.md
.github/workflows/: ci.yml
docs/: SESSION-2026-05-08-hardening.md  cloud-build-prompt.md
docs/codex-review/: review-request-round2.md  review-request-round3.md  review-request-round4.md  review-request.md  review-response-round2.md  review-response-round3.md  review-response-round4.md  review-response.md  round4-sweep-log.md  round4-sweep-task.md
docs/design-system/: components.md  tailwind-preset.js  tokens.css  tokens.json
docs/planning/: 00-overview.md  01-architecture.md  02-agent-topology.md  03-local-models.md  04-claude-code-setup.md  05-testing-pipeline.md  06-mocking-system.md  07-remote-interaction.md  08-integration-map.md  09-implementation-phases.md  10-openclaw-telegram-integration.md  11-v2-control-plane-spec.md  12-website-saas-operating-spec.md  13-operator-quickstart.md  README.md
prompts/: builder.md  mocker.md  orchestrator.md  reporter.md  tester.md
prompts/protocols/: codex-via-bash.md
scripts/: setup-ollama.sh  setup.sh  switch-phase.sh
scripts/ncdev-hooks/: pre_bash_guard.py  settings.json
src/: __init__.py  __main__.py  config.py  memory.py  ollama_client.py  pipeline.py  utils.py
src/auditor/: __init__.py  report.py  scanner.py
src/builder/: __init__.py  codex_runner.py  fallback.py  prompt_gen.py  reviewer.py  worktree.py
src/hardener/: __init__.py  accessibility.py  error_audit.py  performance.py  responsive.py
src/ncdev/: __init__.py  (+18 more)
tests/: conftest.py  test_ai_provider.py  test_ai_session.py  test_auditor.py  test_change_plan.py  test_claude_session.py  test_cli.py  test_config.py  test_config_integrations.py  test_consensus.py  test_discovery.py  test_engine.py  test_intake_api.py  test_memory.py  test_no_model_literals.py  test_ollama_client.py  test_pipeline.py  test_pipeline_memory.py  test_preflight.py  test_qa_intake.py  test_runner.py  test_utils.py
tools/: sync-project-context.py
(+359 files in other folders)
