[project]
name = "nc-dev-system"
version = "0.1.0"
description = "Autonomous development agent that takes requirements and delivers tested, production-ready codebases"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "jinja2>=3.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "pytest-timeout>=2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 120
markers = [
    "unit: Unit tests (no external deps)",
    "integration: Integration tests (may need Docker)",
    "e2e: End-to-end tests (needs Docker + browsers)",
    "slow: Tests that take >30 seconds",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/scaffolder/templates/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
