[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nc-dev-system"
version = "0.1.0"
description = "Autonomous development agent that takes requirements and delivers tested, production-ready codebases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8,<3",
  "pyyaml>=6.0.1,<7",
  "rich>=13.7,<15",
  "jinja2>=3.1,<4",
  "httpx>=0.27,<1",
  "motor>=3.5,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "pytest-mock>=3.12",
  "pytest-timeout>=2.2",
]

[project.scripts]
ncdev = "ncdev.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
timeout = 120
markers = [
  "unit: Unit tests (no external deps)",
  "integration: Integration tests (may need Docker)",
  "e2e: End-to-end tests (needs Docker + browsers)",
  "slow: Tests that take >30 seconds",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/scaffolder/templates/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
